packages/stylist-macros/tests/css_macro/selector_as_attribute-fail.stderr
error: expected a valid part of a scope qualifier
 --> $DIR/selector_as_attribute-fail.rs:3:36
  |
3 |         looks_like_selector(): blue;
  |                                    ^
